# -*- coding: utf-8 -*-
import abc


class View(metaclass=abc.ABCMeta):
    """Base class for all views.

    A view is a widget that represents the visualisation of a type."""
    ...
